--- a/templates/hi.html
+++ b/templates/hi.html
@@ -1,3 +1,4 @@
 <!DOCTYPE html>
 <h1>file is created and will be pushed</h1>
 this is main branch
+so the text we edited there will not be here because its another branch now we need to rebase it
